# esp-aws-iot

./: CMakeLists.txt
examples/ota/ota_mqtt/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/ota/ota_mqtt/main/: CMakeLists.txt  app_main.c  demo_config.h  ota_demo_core_mqtt.c
examples/ota/ota_mqtt/patches/: aws-iot-device-sdk-embedded-C.patch
port/crypto/: iot_crypto.c
port/ota/: ota_pal.c
